Fix sonar: Avoid varargs